Fixed overflow

--- a/client/styles/font.scss
+++ b/client/styles/font.scss
@@ -6,6 +6,8 @@ body {
     font-weight: normal;
     font-size: inherit;
     color: $slate;
+
+    overflow: hidden;
 }
 
 
